@startuml ERD_Increment1
title Entity Relationship Diagram - Increment 1 (UC-01 s.d. UC-10)

' Tidak menggunakan skinparam entity agar lebih rapi
skinparam linetype ortho

entity "users" {
  *id : int <<PK>>
  --
  name : varchar
  email : varchar
  password : varchar
  is_active : tinyint
}

entity "categories" {
  *id : int <<PK>>
  --
  name : varchar
  is_active : tinyint
}

entity "units" {
  *id : int <<PK>>
  --
  name : varchar
  alias : varchar
  group : varchar
  base_unit_id : int <<FK>>
  conversion_factor : decimal
}
units ||--o{ units : "derived from"

entity "suppliers" {
  *id : int <<PK>>
  --
  name : varchar
  description : text
  contact_name : varchar
  phone : varchar
  street : varchar
  landmark : varchar
  maps_link : varchar
  image : varchar
}

entity "materials" {
  *id : int <<PK>>
  --
  name : varchar
  description : text
  image : varchar
  status : varchar
  is_active : tinyint
  is_recipe : tinyint
  minimum : decimal
}

entity "material_details" {
  *id : int <<PK>>
  --
  material_id : int <<FK>>
  unit_id : int <<FK>>
  is_main : tinyint
  quantity : decimal
  supply_quantity : decimal
  supply_price : decimal
}
materials ||--|{ material_details : "has"
units ||--o{ material_details

entity "material_batches" {
  *id : int <<PK>>
  --
  material_id : int <<FK>>
  unit_id : int <<FK>>
  batch_number : varchar
  date : date
  batch_quantity : decimal
}
materials ||--|{ material_batches : "has"
units ||--o{ material_batches

entity "expenses" {
  *id : int <<PK>>
  --
  expense_number : varchar
  expense_date : date
  supplier_id : int <<FK>>
  status : varchar
  grand_total_expect : decimal
  grand_total_actual : decimal
  is_start : tinyint
  is_finish : tinyint
}
suppliers ||--o{ expenses

entity "expense_details" {
  *id : int <<PK>>
  --
  expense_id : int <<FK>>
  material_id : int <<FK>>
  unit_id : int <<FK>>
  quantity_expect : decimal
  quantity_get : decimal
  price_expect : decimal
  price_get : decimal
  total_expect : decimal
  total_actual : decimal
  expiry_date : date
}
expenses ||--|{ expense_details : "contains"
materials ||--o{ expense_details
units ||--o{ expense_details

entity "type_costs" {
  *id : int <<PK>>
  --
  name : varchar
}

entity "products" {
  *id : int <<PK>>
  --
  name : varchar
  description : text
  price : decimal
  stock : int
  method : json
  is_active : tinyint
  pcs : int
  pcs_capital : decimal
  capital : decimal
}

entity "product_categories" {
  *id : int <<PK>>
  --
  product_id : int <<FK>>
  category_id : int <<FK>>
}
products ||--|{ product_categories
categories ||--|{ product_categories

entity "product_compositions" {
  *id : int <<PK>>
  --
  product_id : int <<FK>>
  material_id : int <<FK>>
  unit_id : int <<FK>>
  material_quantity : decimal
}
products ||--|{ product_compositions : "composed of"
materials ||--o{ product_compositions
units ||--o{ product_compositions

entity "other_costs" {
  *id : int <<PK>>
  --
  product_id : int <<FK>>
  type_cost_id : int <<FK>>
  price : decimal
}
products ||--o{ other_costs
type_costs ||--o{ other_costs

entity "shifts" {
  *id : int <<PK>>
  --
  shift_number : varchar
  opened_by : int <<FK>>
  closed_by : int <<FK>>
  start_time : datetime
  end_time : datetime
  status : varchar
  initial_cash : decimal
  final_cash : decimal
  total_sales : decimal
  total_refunds : decimal
  total_discounts : decimal
}
users ||--o{ shifts : "opened_by"

entity "transactions" {
  *id : int <<PK>>
  --
  user_id : int <<FK>>
  invoice_number : varchar
  name : varchar
  phone : varchar
  date : date
  time : time
  payment_status : varchar
  status : varchar
  method : varchar
  total_amount : decimal
  created_by_shift : int <<FK>>
}
users ||--o{ transactions
shifts ||--o{ transactions : "created in"

entity "transaction_details" {
  *id : int <<PK>>
  --
  transaction_id : int <<FK>>
  product_id : int <<FK>>
  quantity : int
  price : decimal
  pcs_capital_snapshot : decimal
}
transactions ||--|{ transaction_details : "contains"
products ||--o{ transaction_details

entity "payment_channels" {
  *id : int <<PK>>
  --
  type : varchar
  group : varchar
  bank_name : varchar
  account_number : varchar
  account_name : varchar
  qris_image : varchar
  is_active : tinyint
}

entity "payments" {
  *id : int <<PK>>
  --
  receipt_number : varchar
  transaction_id : int <<FK>>
  payment_channel_id : int <<FK>>
  payment_method : varchar
  payment_group : varchar
  paid_amount : decimal
  paid_at : datetime
}
transactions ||--|{ payments : "paid via"
payment_channels ||--o{ payments

entity "productions" {
  *id : int <<PK>>
  --
  production_number : varchar
  transaction_id : int <<FK>>
  method : varchar
  date : date
  time : time
  status : varchar
  is_start : tinyint
  is_finish : tinyint
}
transactions ||--o{ productions : "triggers"

entity "production_details" {
  *id : int <<PK>>
  --
  production_id : int <<FK>>
  product_id : int <<FK>>
  quantity_plan : decimal
  quantity_get : decimal
  quantity_fail : decimal
  cycle : int
}
productions ||--|{ production_details : "has"
products ||--o{ production_details

entity "production_workers" {
  *id : int <<PK>>
  --
  production_id : int <<FK>>
  user_id : int <<FK>>
}
productions ||--o{ production_workers
users ||--o{ production_workers

entity "inventory_logs" {
  *id : int <<PK>>
  --
  material_id : int <<FK>>
  material_batch_id : int <<FK>>
  user_id : int <<FK>>
  action : varchar
  quantity_change : decimal
  quantity_after : decimal
  reference_type : varchar
  reference_id : int
  note : text
}
materials ||--o{ inventory_logs
material_batches ||--o{ inventory_logs
users ||--o{ inventory_logs

entity "notifications" {
  *id : int <<PK>>
  --
  user_id : int <<FK>>
  title : varchar
  body : text
  type : varchar
  is_read : tinyint
  status : varchar
}
users ||--o{ notifications

@enduml
